<resources>
    <string name="app_name">DSADude</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_structures">Data Structures</string>
    <string name="algorithms">Algorithms</string>
    <string name="sorting_algorithms">Sorting Algorithms</string>
    <string name="bubble_sort">Bubble Sort</string>
    <string name="insertion_sort">Insertion Sort</string>
    <string name="merge_sort">Merge Sort</string>
    <string name="quick_sort">Quick Sort</string>
    <string name="selection_sort">Selection Sort</string>
    <string name="number_to_search">Enter a number to search</string>
    <string name="search">Search</string>
    <string name="linear_search">Linear Search</string>
    <string name="searching_algorithms">Searching Algorithms</string>
    <string name="binary_search">Binary Search</string>
    <string name="start_index">Start</string>
    <string name="end">End</string>
    <string name="mid">Mid</string>
    <string name="item_not_found">Item not found in array!</string>
    <string name="item_found">Item found at index %d</string>
    <string name="item_value">Item Value</string>
    <string name="position_in_array">Position</string>
    <string name="perform">Perform</string>
    <string name="operations">Operations</string>
    <string name="dynamic_array">Dynamic Array</string>
    <string name="dummy">Dummy String</string>
    <string name="stack">Stack</string>
    <string name="top">Top</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="queue">Queue</string>
    <string name="normal">Normal</string>
    <string-array name="array_operations">
        <item>Append</item>
        <item>Insert</item>
        <item>Pop</item>
        <item>Remove</item>
    </string-array>
    <string-array name="ll_operations">
        <item>Add to Front</item>
        <item>Add to End</item>
        <item>Delete from Front</item>
        <item>Delete from End</item>
        <item>Search</item>
    </string-array>
    <string-array name="stack_operations">
        <item>Push</item>
        <item>Pop</item>
    </string-array>
    <string-array name="queue_operations">
        <item>Enqueue</item>
        <item>Dequeue</item>
    </string-array>
</resources>