<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:background="@color/black">

    <TextView
        android:id="@+id/sorting_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/binary_search"
        android:fontFamily="@font/quicksand_semibold"
        android:textSize="40sp"
        android:padding="8dp"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_to_search"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/PaleBlue"
        android:outlineSpotShadowColor="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/PaleBlue"
        app:hintTextColor="@color/BlueViolet1"
        app:layout_constraintTop_toBottomOf="@id/sorting_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_to_search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textColor="@color/white"
            android:hint="@string/number_to_search"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/start_searching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/PrettyPink"
        android:text="@string/search"
        app:layout_constraintTop_toBottomOf="@id/number_to_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/found_or_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/LightOrange"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/start_searching"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/found_or_not"
            app:layout_constraintBottom_toTopOf="@id/helper">

            <FrameLayout
                android:id="@+id/visual_container"
                android:layout_width="match_parent"
                android:background="@color/black"
                android:layout_height="0dp"
                android:minHeight="400dp"/>

        </ScrollView>

    <LinearLayout
        android:id="@+id/helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_rectangle_background"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:gravity="center"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/start_index"
                android:padding="8dp"
                android:layout_gravity="start|center_horizontal"
                android:textSize="18sp"/>

            <View
                android:background="@color/PrettyPink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_rectangle_background"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:gravity="center"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/end"
                android:padding="8dp"
                android:layout_gravity="start|center_horizontal"
                android:textSize="18sp"/>

            <View
                android:background="@color/LightGreen3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_rectangle_background"
            android:padding="10dp"
            android:gravity="center"
            android:layout_margin="8dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/mid"
                android:padding="8dp"
                android:layout_gravity="center"
                android:textSize="18sp"/>

            <View
                android:background="@color/BlueViolet3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>