<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/sorting_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/quicksand_semibold"
        android:padding="8dp"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/item_and_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sorting_label">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/array_operations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:hint="@string/operations"
            android:fontFamily="@font/quicksand_semibold"
            android:textColorHint="@color/PaleBlue"
            app:boxStrokeColor="@color/PaleBlue"
            app:hintTextColor="@color/BlueViolet1"
            app:endIconTint="@color/FreshOrange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_and_position"
            app:layout_constraintTop_toBottomOf="@id/sorting_label">

            <AutoCompleteTextView
                android:id="@+id/operation_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_bold"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/PaleBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/PaleBlue"
            app:hintTextColor="@color/BlueViolet1"
            app:layout_constraintTop_toBottomOf="@id/sorting_label"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:fontFamily="@font/quicksand_semibold"
                android:textColor="@color/white"
                android:hint="@string/item_value"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/position_in_array"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColorHint="@color/PaleBlue"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/PaleBlue"
            app:hintTextColor="@color/BlueViolet1"
            app:layout_constraintTop_toBottomOf="@id/sorting_label"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/position_in_array_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/white"
                android:fontFamily="@font/quicksand_semibold"
                android:hint="@string/position_in_array"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/perform_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perform"
        app:layout_constraintTop_toBottomOf="@id/item_and_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/visual_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/helper"
        app:layout_constraintTop_toBottomOf="@id/perform_operation">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/curved_rectangle_background"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:gravity="center"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/top"
                android:padding="8dp"
                android:layout_gravity="start|center_horizontal"
                android:textSize="18sp" />

            <View
                android:background="@color/PrettyPink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>